--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -27,3 +27,10 @@ nav{
         display: inline-block;
         padding:20px;
     }
+   
+    div ul li{
+        display: inline-block;
+    }
+    div ul li img{
+        width: 170px;
+    }
