--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@ header h1{
     color: gray;
     background-color: black;
 }
+ header nav ul li {
+    display: inline-block;
+    padding:20px;
+}
+nav ul li a{
+    color:rgb(226, 28, 28);
+    text-decoration: none;
+    font-weight: bold;
+}
 header p{
     background-color: cornflowerblue;
 }
