--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+}
+
+
 header h1{
     text-align: center;
     color: gray;
@@ -8,6 +13,7 @@ nav{
     }
  nav ul { 
         position: relative;
+        text-align: center;
     }
    
     main{
@@ -15,13 +21,23 @@ nav{
     }
 
  nav ul li {
+    font-family: 'Open Sans', sans-serif;
         display: inline-block;
         padding:20px;
     }
     nav ul li a{
+        font-family: 'Times New Roman', Times, serif;
         color:#fff;
         text-decoration: none;
         font-weight: bold;
+        cursor: pointer;
+        font-size: x-large;
+    }
+    h1 {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        background-color: blue;
     }
     div ol li {
         display: inline-block;
@@ -33,4 +49,10 @@ nav{
     }
     div ul li img{
         width: 170px;
+    }
+    footer p{
+        text-align: center;
+        font-family: 'Fira Sans', sans-serif;
+        font-size: 1em;
+        color: firebrick;
     }
