--- a/css/mstyle.css
+++ b/css/mstyle.css
@@ -26,7 +26,7 @@ nav{
         padding:20px;
     }
     nav ul li a{
-        font-family: 'Times New Roman', Times, serif;
+        font-family: Arial, Helvetica, sans-serif;
         color:#fff;
         text-decoration: none;
         font-weight: bold;
